--- a/package.json
+++ b/package.json
@@ -39,14 +39,10 @@
     "rev-path": "^1.0.0",
     "sort-keys": "^2.0.0",
     "through2": "^2.0.0",
+    "underscore": "^1.8.3",
     "vinyl-file": "^3.0.0"
   },
-  "devDependencies": {
-    "ava": "*",
-    "gulp-rev": "^8.0.0",
-    "p-event": "^1.0.0",
-    "xo": "*"
-  },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/makemoretime/gulp-rev-fix/issues"
   },
