--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gulp-rev-fix",
-  "version": "2.0.0",
+  "name": "gulp-rev2",
+  "version": "1.0.0",
   "description": "improve gulp-rev",
   "license": "MIT",
   "repository": {
